--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@ function handleResponse(response) {
     allowEscapeKey: false, // منع الإغلاق باستخدام زر الخروج
     showCloseButton: false, // إزالة زر الإغلاق
     preConfirm: () => {
-        window.open('https://www.facebook.com/صفحتك', '_blank'); // فتح صفحة الفيسبوك عند الضغط على الزر
+        window.open('https://www.facebook.com/Blida.FL/', '_blank'); // فتح صفحة الفيسبوك عند الضغط على الزر
     }
 });
             localStorage.setItem('lastSentData', JSON.stringify({ timestamp: Date.now() }));
